--- a/src/Resources/views/viewer/filters.html.twig
+++ b/src/Resources/views/viewer/filters.html.twig
@@ -1,9 +1,10 @@
 <div class="w-full px-4 md:px-0 md:mt-4 text-gray-800 leading-normal">
 
     <div class="flex flex-wrap">
-        <div class="w-full p-3">
+    
+        <div class="w-full">
         
-            <div class="bg-white border rounded shadow p-2 text-sm flex flex-col">
+            <div class="bg-white border rounded p-2 text-sm flex flex-col" style="margin-bottom: 5px">
             
             	<div class="flex">
 	                <div class="flex space-x-5">
@@ -29,15 +30,6 @@
 	                        </select>
 	                    </div>
 	                    
-	                    <div class="flex flex-col space-y-2 hidden">
-	                        <label for="file_filter" class="text-gray-700">File</label>
-	                        <select class="h-10 pl-3 pr-6 w-40 md:w-auto text-base placeholder-gray-600 border rounded-md appearance-none focus:shadow-outline" id="file-filter">
-	                            <option value="all">All</option>
-	                            {% for file in files %}
-	                                <option value="{{ file.filename }}">{{ file.filename }}</option>
-	                            {% endfor %}
-	                        </select>
-	                    </div>
 	                    <div class="flex flex-col justify-end space-y-2">
 	                        <button id="apply-filter" type="button" class="rounded-sm focus:outline-none focus:shadow-outline inline-flex py-1 px-2 shadow bg-blue-500 text-white">
 	                            Filter
@@ -46,29 +38,16 @@
 	                    
 	                    <!--/Filters-->
 	                </div>
-	                <div class="flex-grow flex justify-end items-center pt-5 md:pt-0">
-	                    <!--Search Button-->
-	                    <div class="flex space-x-2 px-5">
-	                        <label for="case" class="text-gray-700">Case sensitive</label>
-	                        <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
-	                            <input type="checkbox" name="toggle-case" id="toggle-case" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
-	                            <label for="case" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
-	                        </div>
-	                    </div>
-	                    <!--/Search Button-->
-	                </div>
 				</div>
 				
 				<div class="flex">
 					<div class="flex flex-col space-y-2" style="flex: 1">
 						<label for="select-column-field" class="text-gray-700">Colonne visibili</label>
 						<select class="form-select" id="select-column-field" data-placeholder="Choose anything" style="" multiple>
-						    <option value="0" selected="selected">Data</option>
-						    <option value="1">Channel</option>
-						    <option value="2" selected="selected">Level</option>
-						    <option value="3" selected="selected">Message</option>
-						    <option value="4">Context</option>
-						    <option value="5">Extra</option>
+							
+							{% for key, group in groups %}
+                            	<option value="{{ loop.index0 }}" {% if group.visible %} selected="selected" {% endif %} >{{ key|capitalize }}</option>
+                            {% endfor %}
 						</select>
 					</div>
 				</div>
