--- a/src/Resources/views/viewer/index.html.twig
+++ b/src/Resources/views/viewer/index.html.twig
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.13.2/jquery-ui.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
     
-    
     <style>
         .toggle-checkbox:checked {
             @apply: right-0 border-green-400;
@@ -31,6 +30,10 @@
         .yellowClass {
         	background-color: #f1cc003b !important;
         }
+        
+        .dataTables_scroll {
+        	padding-top: 5px;
+        }
     </style>
 {% endblock %}
 {% block javascripts %}
@@ -40,6 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/datatables.net@1.13.5/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.13.2/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jeffreydwalter/ColReorderWithResize@9ce30c640e394282c9e0df5787d54e5887bc8ecc/ColReorderWithResize.js"></script>
     
     <script type="text/javascript">
     
@@ -101,12 +105,16 @@
         	const columnVisible = selectColumnField.select2('data').map(v => v.id);
         	
         	const datatableOptions = {
+        		dom: 'Rlfrtip',
         		scrollX: true,
         		processing: true,
         		serverSide: false,
         		deferLoading: 0,
         		search: {
         			caseInsensitive: true
+        		},
+        		colReorder: {
+            		allowReorder: false
         		},
         		asStripeClasses: [ '' ],
         		ajax: {
@@ -122,12 +130,10 @@
         		columnDefs: [
         			{ targets: "no-sort", orderable: false },
         			{ targets: "_all", className: "border border-gray-400" },
-        			{ targets: 0, visible: columnVisible.includes('0'), className: "border border-gray-400 whitespace-nowrap" },
-        			{ targets: 1, visible: columnVisible.includes('1')},
-        			{ targets: 2, visible: columnVisible.includes('2')},
-        			{ targets: 3, visible: columnVisible.includes('3')},
-        			{ targets: 4, visible: columnVisible.includes('4')},
-        			{ targets: 5, visible: columnVisible.includes('5')}
+        			
+        			{% for key, group in groups %}
+        				{ targets: {{loop.index0}}, visible: {% if group.visible %}true{% else %}false{% endif %}  },
+                    {% endfor %}
         		],
         		columns: Object.keys(groupsConfig).map((groupName) => ({
     				data: groupName,
@@ -171,16 +177,17 @@
         
         	/* Apply filters */
         	btnFilter.on('click', function() {
+        		var url = logsTable.data('remote-url');
         
-        		if (dateFilterFromInput.value !== '') {
-		        	url += '?dateFilterFrom=' + dateFilterFromInput.value;
+        		if (dateFilterFromInput.val() !== '') {
+		        	url += '?dateFilterFrom=' + dateFilterFromInput.val();
 		        }
 		        	
-		        if (dateFilterToInput.value !== '') {
-		        	url += '&dateFilterTo=' + dateFilterToInput.value;
+		        if (dateFilterToInput.val() !== '') {
+		        	url += '&dateFilterTo=' + dateFilterToInput.val();
 		        }
 		        	
-        		url += '&level=' + levelFilterSelect.value;
+        		url += '&level=' + levelFilterSelect.val();
         
         		logsDataTable.ajax.url(url).load();
         	});
@@ -190,7 +197,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="w-full mx-auto pt-20">
+<div class="w-full mx-auto" style="margin-top: 90px;">
 
     <div class="w-full px-4 md:px-0 md:mt-8 mb-16 text-gray-800 leading-normal">
 
@@ -199,13 +206,14 @@
         <div class="w-full px-4 md:px-0 mb-16 text-gray-800 leading-normal">
 
             <div class="flex flex-wrap">
-                <div class="w-full p-3">
+            
+                <div class="w-full">
                 
                     <!--Log Table-->
-                    <div class="bg-white border rounded shadow p-2 text-sm">
+                    <div class="bg-white rounded shadow p-2 text-sm">
                     
                         <table
-                                id="logsTable"
+                         	id="logsTable"
                                 class="display nowrap"
                                 style="width: 100%;"
                                 data-page-length="10"
