--- a/src/Resources/views/viewer/index.html.twig
+++ b/src/Resources/views/viewer/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '@LogViewer/base.html.twig' %}
 
 {% block stylesheets %}
-    <link href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.13.2/jquery-ui.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-contextmenu@2.9.2/dist/jquery.contextMenu.min.css">
@@ -18,10 +18,11 @@
         }
         
         td {
-          	max-width:50px;
+          	max-width:150px;
           	white-space: nowrap;
           	overflow: hidden;
           	text-overflow: ellipsis;
+          	padding: 0px 10px !important;
         }
         
         .redClass {
@@ -35,13 +36,14 @@
         .dataTables_scroll {
         	padding-top: 5px;
         }
+        
     </style>
 {% endblock %}
 {% block javascripts %}
 
     <script src="https://momentjs.com/downloads/moment.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/datatables.net@1.13.5/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/datatables.net@1.13.6/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.13.2/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/jeffreydwalter/ColReorderWithResize@9ce30c640e394282c9e0df5787d54e5887bc8ecc/ColReorderWithResize.js"></script>
